Part1/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: hashicorp/http-echo:latest
        args: ["-listen=:8080", "-text=\"I am blue\""]
        ports:
        - containerPort: 8080		
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
