Part1/blue-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-release
  annotations:
    kubernetes.io/ingress.class: nginx 
    kubernetes.io/elb.port: '80'
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: blue-service
                port:
                  number: 8080
